# AutomationDemo

./: .gitignore  Cargo.toml  beat-a-local-cli.ps1  beat-a-local-summary.ps1  demoscript.md  security-review-local.ps1  switch-copilot-provider.ps1
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: adversarial-review.yml  local-mechanical.yml  srp-pairing.yml
.github/workflows/: ci.yml
crates/hap-controllers/: Cargo.toml
crates/hap-core/: Cargo.toml
crates/hap-crypto/: Cargo.toml
crates/hap-crypto/src/: chacha.rs  error.rs  hkdf.rs  lib.rs  pair_setup.rs  session.rs  srp.rs
crates/hap-crypto/tests/: interop.rs
crates/hap-http/: Cargo.toml
crates/hap-mdns/: Cargo.toml
crates/hap-server/: Cargo.toml
crates/hap-tlv/: Cargo.toml
examples/light-bulb/: Cargo.toml
examples/light-bulb/src/: main.rs
