[workspace]
resolver = "2"
members  = [
  "crates/hap-core",
  "crates/hap-crypto",
  "crates/hap-tlv",
  "crates/hap-http",
  "crates/hap-mdns",
  "crates/hap-controllers",
  "crates/hap-server",
  "examples/light-bulb",
]

[workspace.package]
edition      = "2021"
rust-version = "1.75"
license      = "Apache-2.0"
repository   = "https://github.com/AndrewMFlick/AutomationDemo"

[workspace.lints.rust]
unsafe_code = "forbid"
